tests/run-pass/function_calls/exported_symbol_unwind_allowed.rs
// compile-flags: -Zmiri-disable-abi-check
#![feature(unwind_attributes, c_unwind)]

#[no_mangle]
extern "C-unwind" fn unwind() {
    panic!();
}

fn main() {
    extern "C" {
        #[unwind(allowed)]
        fn unwind();
    }
    unsafe { unwind() }
}
